--- a/set.env
+++ b/set.env
@@ -1,18 +1,18 @@
-PREFIXE=.
-LECTURE_AUTO_STATUS=oui
-TELECHARGER_AUTO_STATUS=oui
+PREFIXE=#
+LECTURE_AUTO_STATUS=non
+TELECHARGER_AUTO_STATUS=non
 NOM_BOT=Zokou-MD
-LIENS_MENU=https://wallpapercave.com/uwp/uwp3943464.jpeg
+LIENS_MENU=https://telegra.ph/file/430a9bd41ef14a894f97f.mp4
 PM_PERMIT=non
 MODE_PUBLIC=oui
 ETAT=1
 SESSION_ID=zokk
-NOM_OWNER=Djalega++
+NOM_OWNER=SHADOW
 NUMERO_OWNER=22891733300
 WARN_COUNT=3
 STARTING_BOT_MESSAGE=oui
 ANTI_VUE_UNIQUE=oui
-PM_CHATBOT=non
+PM_CHATBOT=oui
 HEROKU=non
 DATABASE_URL=postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway
-ANTI_COMMAND_SPAM=non
+ANTI_COMMAND_SPAM=oui
